[package]
name = "stick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-trait = "0.1.57"
clap = { version = "3.2.16", features = ["derive"] }
pyo3 = { version = "0.16.5", features = ["auto-initialize"] }
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
tablier = "0.1.3"
tokio = { version = "1.20.1", features = ["full"] }
